# are-we-learning-yet

./: .gitignore  .travis.yml  CNAME  Gemfile  Justfile  README.html  README.md  Rakefile  _cobalt.yml  _config.yml  about.md  browserconfig.xml  friends.md  github.actions  index.html  index.liquid  irc.html  manifest.json
_bin/: gen_crate_data  gen_crate_data.rb
_data/: crates.yaml  crates_generated.yaml  friends.yaml  topics.yaml
_frameworks/: bayes.html  clustering.html  decision-trees.html  evolution.html  neural-networks.html
_includes/: footer.html  footer.liquid  head.html  head.liquid  header.html  header.liquid
_layouts/: crates.html  crates.liquid  default.html  default.liquid  page.html  page.liquid  post.html  post.liquid
_plugins/: crate_gen.rb
_plugins/scraper/: Cargo.toml
_plugins/scraper/src/: crates.rs  data.rs  github.rs  main.rs
_sass/: _base.scss  _milligram.scss
_scraper/: .gitignore  Cargo.toml  README.md
_topics/: bayes.md  clustering.md  data-preprocessing.md  data-processing.md  data-structures.md  decision-trees.md  evolution.md  gpu-computing.md  linear-classifiers.md  metaheuristics.md  neural-networks.html  neural-networks.md  nlp.md  reinforcement-learning.md  reinforment-learning.md  scientific-computation.html  scientific-computation.md  scientific-computing.md
about/: index.html
clustering/: index.html
css/: main.css  main.css.map  main.scss
data-preprocessing/: index.html
data-structures/: index.html
decision-trees/: index.html
friends/: index.html
gpu-computing/: index.html
metaheuristics/: index.html
(+38 files in other folders)
