[package]
name = "scraper"
version = "0.1.0"
authors = ["Anthony Nowell <anowell@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0.61"
serde_yaml = "0.8.15"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.38"
reqwest = { version = "0.11.0", default-features = false, features = ["json", "gzip", "rustls-tls"] }
octocrab = { version = "0.8.10", default-features = false }
chrono = { version = "0.4", features = ["serde"] }
url = { version = "2.2.0", features = ["serde"] }
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
crates_io_api = { version = "0.7.0", default-features = false }

[features]
default = ["reqwest/rustls-tls", "crates_io_api/rustls", "octocrab/rustls"]
